--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,115 @@
-body {
+/* Main Styles */
+
+html,
+body,
+#root,
+#root > div {
+  height: 100%;
   margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+#neighborhood-map {
+  height: 100%;
+}
+
+#neighborhood-map .row {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: column;
+  -moz-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  height: 100%;
+}
+
+  #neighborhood-map #placesList {
+    background-color: #4E4D4A;
+    padding: 15px 15px 0 15px;
+    -webkit-flex: 0 1 auto;
+    -moz-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+  }
+
+    #neighborhood-map #placesList h1 {
+      color: #94ba65;
+      font-size: 20px;
+      font-weight: 900;
+    }
+
+    #neighborhood-map #placesList input {
+      padding-left: 10px;
+      width: 100%;
+      margin-top: 10px;
+    }
+
+    #neighborhood-map #placesList .places {
+      border-top: 1px solid #94ba65;
+      margin: 20px 0 0 0;
+      list-style: none;
+      padding: 0;
+    }
+
+      #neighborhood-map #placesList .places .activeMarker {
+        border: 1px solid #fff;
+        background-color: #fff;
+        display: block;
+        float: right;
+        margin-top: 10px;
+        color: #000;
+        border-radius: 50%;
+        width: 30px;
+        text-align: center;
+        text-transform: lowercase;
+        padding-bottom: 4px;
+        cursor: pointer;
+      }
+
+      #neighborhood-map #placesList .places .place {
+        color: #fff;
+        margin: 10px 0 0 0;
+        border-bottom: 1px dashed #94ba65;
+        padding-bottom: 10px;
+        cursor: pointer;
+      }
+
+        #neighborhood-map #placesList .places .place:hover {
+          color: #61dafb;
+        }
+
+        #neighborhood-map #placesList .places .place:last-of-type {
+          border: 0;
+        }
+
+  #neighborhood-map #mapContainer {
+    -webkit-flex: 1 1 auto;
+    -moz-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    margin: 0;
+    padding: 0;
+  }
+
+@media (min-width: 570px) {
+
+  #neighborhood-map #placesList {
+
+  }
+
+  #neighborhood-map .row {
+    flex-wrap: wrap;
+    flex-flow: nowrap;
+  }
+
+  #neighborhood-map #placesList {
+    flex: 0 0 33.333333%;
+  }
+
+  #neighborhood-map #mapContainer {
+    flex: 0 0 66.666667%;
+  }
+
 }
